# XidianCS

./: .gitignore  README.md
Algorithms 算法/1_渗透问题/src/: Painter.java
Algorithms 算法/2_排序算法性能比较/: SortTest.java
Algorithms 算法/2_排序算法性能比较/Sort/: Quick3way.java
Analog electronic technology 模拟电子技术/: 模电合集_诚夏.md  第二章_放大电路分析基础.md  第四章_场效应管放大电路.md
C language C语言/c课程设计/: 1.wordLst  1_1.docx  4_1.docx
C language C语言/c课程设计/课程设计相关资料下载/: 实验提交 与 评分标准.doc  课程设计练习题.doc
Computer Networks 计算机网络/: 数据链路控制.xmind  第11章_数据链路控制.md  网络层.md
Computer Organization 计算机组成/: 第一章 绪论.md  第三章_运算方法与运算器.md  第二章_计算机系统中的数据表示.md  第五章_指令系统.md  第五章_指令系统.xmind  第四章_存储系统.md  第四章_存储系统.xmind
Data Structure 数据结构/16030199025_张俊华_第一次上机/: 第一章实习报告_张俊华16030199025.txt  集合的交并和差运算.cpp
Data Structure 数据结构/16030199025_张俊华_第二次上机/: 第二章实习报告_16030199025_张俊华.txt  魔王语言翻译.cpp
Data Structure 数据结构/16030199025_张俊华_第五次上机/: userInfo.csv  哈希表.cpp
Data Structure 数据结构/16030199025_张俊华_第六次上机/: 多关键字排序.cpp
Data Structure 数据结构/16030199025_张俊华_第四次上机/: 5_4教学计划编制.cpp  张俊华_第四次上机报告.txt
Operating System 操作系统/: 操作系统笔记_诚夏.md  第一章_操作系统概述.md  第九章_分布式计算机系统.md  第二章_用户接口与作业管理.md  第五章_存储管理.md  第六章_文件管理.md  第四章_死锁.md
Operating System 操作系统/实验/: 信号量实现进程同步.c
专业平台基础课/C language C语言/c课程设计/: 1.wordLst  1_2.docx  1_3.docx  2_2.docx  3_2.docx  5_1.docx  5_2.docx
专业平台基础课/微机原理与系统设计/Exam 期末/: exam.md
专业平台基础课/微机原理与系统设计/Exam 考试/: exam.md
专业平台基础课/微机原理与系统设计/Exp 实验/: 微机原理实验报告.docx  微机原理实验报告.md
专业平台基础课/微机原理与系统设计/Exp 课程实验/: 实验报告标准封面(最新).doc  微机原理实验报告.md
专业平台基础课/微机原理与系统设计/Notes 笔记/: 2_8086 处理器.md  3_汇编语言的程序设计.md  4.md  5_存储器的设计.md  6_输入输出.md  7_.md  add.md  期末复习v1.md
专业平台基础课/微机原理与系统设计/Slides 课件/: 2017微机原理复习1.pptx  2017微机原理复习2.pptx  2019下微机补考-复习要点-2020.08.docx  chap02_addon_奇偶存储体解释.pptx  chap03_01.pptx  chap03_03.pptx  chap03_04_OpenMP.pptx  chap03_addon_汇编语言的编译.pptx  chap05_03.pptx  chap05_作业_2018.11.15.ppt  chap06_addon1_8259原理解释.pptx  chap06_addon2_APIC.pptx  chap06_addon3_定时中断TSR.pptx  chap07_01(1).pptx  chap07_homework_ans-2018.12.pptx  chap07_homework_ans_2018.12.pptx  chap08_02.pptx  chap08_03.pptx  微机原理试题两套.doc
专业核心课/数据结构/: Readme.md  [@csjue]数据结构上机题.docx
专业选修课/3_1/: 匿名成绩数据.xlsx
专业选修课/移动互联网导论/: 源码地址以及报告参考.md
专业选修课/编译原理/: 语法制导翻译.xmind
专业选修课/编译原理/作业/源代码/: CMakeLists.txt  config.cmake.in  database.cpp  dbCore.cpp  dbShell.cpp  myarray.cpp  sql.l  sql.y  table_printer.cpp
专业选修课/编译原理/作业/源代码/include/: database.h  dbCore.h  dbShell.h  myarray.h
专业选修课/编译原理/作业/源代码/include/bprinter/: table_printer.h
专业选修课/编译原理/作业/源代码/include/bprinter/impl/: table_printer.tpp.h
其他/保研/: 保研经验分享.md
基础课/离散数学/: 离散数学复习题及答案.doc
基础课/线性代数/: ReadMe.md
集中实验环节/操作系统课程设计/: 操作系统课程设计报告.doc
集中实验环节/计算机组织与体系结构课程设计/: 计算机组织与体系结构课程设计讲义.docx  计组课设.md
(+1142 files in other folders)
